crates/ssa-workflow-derive/tests/ui/missing_version.stderr
error: missing #[canonical_encode(version = N)]
 --> tests/ui/missing_version.rs:3:10
  |
3 | #[derive(CanonicalEncode)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `CanonicalEncode` (in Nightly builds, run with -Z macro-backtrace for more info)
