crates/ssa-workflow-derive/tests/ui/missing_version.rs
use ssa_workflow_derive::CanonicalEncode;

#[derive(CanonicalEncode)]
struct MissingVersion {
    value: u64,
}

fn main() {}
